--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,16 @@
 body {
   @apply bg-slate-50 text-slate-800;
 }
+
+/* Custom Scrollbar para a lista */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  @apply bg-slate-200 rounded-full hover:bg-teal-200 transition-colors;
+}
